Initial ToDo item create form functional

--- a/index.html
+++ b/index.html
@@ -37,7 +37,19 @@
 		<span>*</span>
 		<br>
 
+		<label for="is-complete">Is Complete?</label>
+		<input id="is-complete" type="checkbox">
+		<br>
 
+		<label for="urgency">Choose an urgency:</label>
+		<select id="urgency">
+			<option value="L">Low</option>
+			<option value="M">Medium</option>
+			<option value="H">High</option>
+		</select>
+		<br>
+
+		<button type="button">Add ToDo Item</button>
 
 	</div>
 
