--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
 		<button type="button">Add ToDo Item</button>
 
 	</div>
+	<div id="read-item">
+		<button type="button">Read Item</button>
+	</div>
 
 	<script>
 		const picker = datepicker(".due-date");
