Finished basic prototype - adding/completing todos

--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 		<button type="button">Read Item</button>
 	</div>
 
+	<div id="todo-list"></div>
+
 	<script>
 		const picker = datepicker(".due-date");
 	</script>
