--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<title>ToDo List</title>
 	<meta   name="description"
 			content="Create a todo list for free">
-	<link rel="stylesheet" href="node_modules/js-datepicker/dist/datepicker.min.css">
-	<script src="node_modules/js-datepicker/dist/datepicker.min.js"></script>
+	<link rel="stylesheet" href="css/datepicker.min.css">
+	<script src="scripts/datepicker.min.js"></script>
 	<link rel="stylesheet" href="css/site.css">
 	<script src="scripts/main.js"></script>
 </head>
