Fixed end-date datepicker

--- a/index.html
+++ b/index.html
@@ -59,7 +59,12 @@
 	<div id="todo-list"></div>
 
 	<script>
-		const picker = datepicker(".due-date");
+		// Loop through all "due-date" class elements
+		// and add the datepicker
+		let allDateElem = document.querySelectorAll(".due-date");
+		for (let i = 0; i < allDateElem.length; i++) {
+			datepicker(allDateElem[i]);
+		}
 	</script>
 
 
