Changed form tag from <div> to <form>; spacing.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 	<header>
 		<h1>Create your ToDo List</h1>
 	</header>
-	<div id="create-item">
+	
+	<form id="create-item">
 		<label for="title">Title: </label>
 		<input id="title" type="text">
 		<span>*</span>
@@ -50,8 +51,8 @@
 		<br>
 
 		<button type="button">Add ToDo Item</button>
+	</form>
 
-	</div>
 	<div id="read-item">
 		<button type="button">Read Item</button>
 	</div>
